Remove use of teamService.getOrganisationTeamsForOrganisationGroups (#127)
* Remove use of teamService.getOrganisationTeamsForOrganisationGroups

* Add test coverage